remove some unneeded use of collectors